ChangeLog

Version 5.1.2, 27 October 2023
[BUGFIX]  Keep the original value for "loadFlexformsFromOtherCE" even if the search box plugin has an empty value in the FlexForm which lead to empty search results, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/142

Version 5.1.1, 27 October 2023
[BUGFIX]  Fix regression introduced in 5.1.0 (search was always empty), https://github.com/tpwd/ke_search/issues/195

Version 5.1.0, 20 October 2023
[FEATURE] Additional word characters: Allows searching for words containing e.g. dots or hyphens, https://github.com/tpwd/ke_search/issues/19
[TASK]    Exclude all parameters (including filters) from cHash calculation, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/187
[BUGFIX]  Allow to use 'loadFlexformsFromOtherCE' parameter for TypoScript-instantiated plugins, thanks to Garvin Hicking, https://github.com/tpwd/ke_search/pull/152
[BUGFIX]  Avoid undefined array key "sortWithoutSearchword", "resultsPerPage" and "noResultsText", https://github.com/tpwd/ke_search/issues/151
[BUGFIX]  Avoid slow TYPO3 backend list view due to missing sql index, thanks to Daniel Siepmann, https://github.com/tpwd/ke_search/issues/190
[TASK]    Pass $field to modifyContentFromContentElement hook, thanks to Marc Harding, https://github.com/tpwd/ke_search/pull/192/
[BUGFIX]  Fix encoding of spaces in file path, thanks to Jan-Claas Dirks, https://github.com/tpwd/ke_search/pull/189

Version 5.0.4, 15 September 2023
[TASK]    Exclude ke_search parameters from cacheHash validation, thanks to Andreas Mühe and schlotzz, https://github.com/tpwd/ke_search/issues/149
[BUGFIX]  Avoid undefined array key in indexer runner, thanks to ecosmox36. https://github.com/tpwd/ke_search/issues/160
[TASK]    Prevent indexing when file metadata is missing, thanks to Moritz Ngo, https://github.com/tpwd/ke_search/pull/182